--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li>Percy Jackson och Olympierna/Olympens Hjältar - Rick Riordan</li>
                 <li>Good Omens - Neil Gaiman & Terry Pratchett</li>
-                <li>Berättelsen om Narnia - C.S Lewis</li>
+                <li>HeartStoppers - Alice Oseman</li>
                 <li>Ja, jag har Mens, hurså? - Clara Henry</li>
                 <li>Ibland mår jag inte så bra - Therese Lindgren</li>
                 <li>Ensam på Mars - Andy Weir</li>
