--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
     
     <footer>Copyright &copy 2022</footer>
 
+    <script src="main.js"></script>
+    </body>
+    </html>></script>
 </body>
 </html>
